--- a/nst.html
+++ b/nst.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Norstone</title>
-    <script type="application/ld+json">{ "@context": "http://schema.org/", "@type": "Product", "name": "White Stacked Stone RockPANELS™", "description": "Stacked White Quartz Panels for Walls."}, "AggregateRating" { "@type": "AggregateRating":"4.9", "ratingValue": "4.9", "reviewCount": "277" }
+    <script type="application/ld+json">
+      { "@context": "http://schema.org/", "@type": "Product", "name": "White Stacked Stone RockPANELS™", "description": "Stacked White Quartz Panels for Walls."}, "AggregateRating" { "@type": "AggregateRating":"4.9", "ratingValue": "4.9", "reviewCount": "277" }
     </script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="large-4 columns">
+      <div class="product__text product__text--narrower">
+        <h2
+          itemprop="name"
+          class="xx-large color-secondary text-center large-text-right"
+          style="margin-bottom: 5px"
+        >
+          White Quartz
+        </h2>
+        <h1 class="small color-primary text-center large-text-right">
+          World Class Stone Veneer
+        </h1>
+        <p class="text-justify">
+          <strong>PRODUCT DETAILS BELOW.</strong
+          ><span itemprop="description">
+            Pleasing to the eye and to the designer's color pallet, the White
+            Quartz exhibits remarkably bright whites and occasional off-whites.
+            Unusual and rare, this is one of our finest.
+            <em>Inquire for samples.</em></span
+          >
+        </p>
+        <a class="button--main float-right" href="/contact-us"
+          >Request a Sample</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
