change to same name

--- a/nst.html
+++ b/nst.html
@@ -599,7 +599,7 @@
               and is ideal for your exclusive project.
             </p>
             <script type="application/ld+json">
-              { "@context": "http://schema.org/", "@type": "Product", "name": "White Stacked Stone RockPANELS™", "description": "Stacked White Quartz Panels for Walls."}, "AggregateRating" { "@type": "AggregateRating":"4.9", "ratingValue": "4.9", "reviewCount": "277" }
+              { "@context": "http://schema.org/", "@type": "Product", "name": "White Quartz", "description": "Stacked White Quartz Panels for Walls."}, "AggregateRating" { "@type": "AggregateRating":"4.9", "ratingValue": "4.9", "reviewCount": "277" }
             </script>
             <h3 class="medium color-secondary">
               White Rock Panels are available in:
