add offers itemprop

--- a/nst.html
+++ b/nst.html
@@ -298,6 +298,10 @@
                 <h1 class="small color-primary text-center large-text-right">
                   World Class Stone Veneer
                 </h1>
+                <div itemprop="offers" itemtype="https://schema.org/Offer" itemscope>
+                    <meta itemprop="priceCurrency" content="USD" />
+                    <meta itemprop="price" content="0" />
+                </div>
                 <p class="text-justify">
                   <strong>PRODUCT DETAILS BELOW.</strong
                   ><span itemprop="description">
